[gd_scene load_steps=3 format=3 uid="uid://c8xvhxqxqxqxq"]

[ext_resource type="Script" uid="uid://bpl81ij341yvq" path="res://scripts/ui/game_ui.gd" id="1_0x0x0"]
[ext_resource type="PackedScene" uid="uid://brnpomk1x2pks" path="res://scenes/entities/clickable_object.tscn" id="2_0x0x0"]

[node name="Game" type="Node2D"]
script = ExtResource("1_0x0x0")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CurrencyDisplay" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Валюты: 0"
horizontal_alignment = 2

[node name="LevelDisplay" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 90.0
grow_horizontal = 0
text = "Уровень: 1"
horizontal_alignment = 2

[node name="MenuButton" type="Button" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 130.0
grow_horizontal = 0
text = "Меню"

[node name="GameArea" type="Node2D" parent="."]

[node name="ClickableObject" parent="GameArea" instance=ExtResource("2_0x0x0")]
position = Vector2(180, 320)

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 1)
